--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 	<table cellspacing="50">
 		<tr>
-			<td><img src="/HTML - Personal Site/img/circle-cropped (1).png" alt="Eugene Profile Picture"></td>
+			<td><img src="/img/circle-cropped (1).png" alt="Eugene Profile Picture"></td>
 			<td><h1>Eugene Timkov</h1>
 				<p><em>Learner of <strong><a href="https://www.appbrewery.co/p/web-development-course-resources/">the App Brewery.</a></strong></em></p>
 				<p>I am Eugene Timkov. I live in Cheboksry with my family.</p></td>
